cd/infrastructure/monitoring/components.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: monitoring
