cd/infrastructure/monitoring/ingress.yaml
---
apiVersion: traefik.containo.us/v1alpha1  
kind: IngressRoute  
metadata:  
  name: grafana
  namespace: monitoring
spec:  
  entryPoints:
    - web
  routes:
  - match: Host(`grafana.localhost`) && PathPrefix(`/`)
    kind: Rule
    services:
    - name: kube-prometheus-stack-grafana
      port: 80
